fixed bio height on mobile

--- a/src/components/homepage-section/homepage-section.styles.css
+++ b/src/components/homepage-section/homepage-section.styles.css
@@ -165,6 +165,10 @@ ul {
     letter-spacing: 0.5px;
   }
 
+  .section-link {
+    font-size: 18px;
+  }
+
   .section-detail {
     font-size: 15px;
     line-height: 25px;
