--- a/src/components/logo-cloud/logo-cloud.styles.css
+++ b/src/components/logo-cloud/logo-cloud.styles.css
@@ -128,7 +128,7 @@
     padding-top: 30px;
     display: flex;
     flex-wrap: wrap;
-    width: 69vw;
+    width: 80vw;
   }
 
   .mobile-logo {
